# threedangles

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sonar-project.properties  vcpkg.json
.github/workflows/: ci-linux.yml  ci-windows.yml
threedangles/: CMakeLists.txt  threedangles.cpp  threedangles.h
threedangles/examples/: CMakeLists.txt  common.h  psy-teapot.cpp  the-cube.cpp  vertex-coloring.cpp
threedangles/src/: CPUID.cpp  CPUID.hpp  Cam.cpp  Cam.hpp  Clipping.cpp  Clipping.hpp  Color.hpp  Engine.cpp  Engine.hpp  Image.hpp  Light.cpp  Light.hpp  Mat4.cpp  Mat4.hpp  Mat4x4.cpp  Mat4x4.hpp  Mesh.cpp  Mesh.hpp  Quat.cpp  Quat.hpp  Rasterizer.cpp  Rasterizer.hpp  Screen.hpp  Tex3.cpp  Tex3.hpp  Triangle.cpp  Triangle.hpp  Vec3d.cpp  Vec3d.hpp  Vec4.cpp  Vec4.hpp  Vertex.cpp  Vertex.hpp  types.hpp
threedangles/src/cpu/: Vec4CPU.hpp
threedangles/src/cuda/: GPUInfo.cu  GPUInfo.cuh  gpu_info.cu  gpu_info.cuh
threedangles/src/sdl/: Image_SDL.cpp  Image_SDL.hpp  Screen_SDL.cpp  Screen_SDL.hpp
threedangles/src/simd/: Vec4SSE.hpp
threedangles/test/: CMakeLists.txt  TestColor.cpp  TestEngine.cpp  TestMat4.cpp  TestMesh.cpp  TestQuat.cpp  TestTex3.cpp  TestTriangle.cpp  TestVec3d.cpp  TestVec4.cpp  TestVertex.cpp
